Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8139

sanity test_101g: 'max_pages_per_rpc not correctly set'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • Lustre 2.9.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for John Hammond <john.hammond@intel.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/fb709a7a-18ec-11e6-b5f1-5254006e85c2.

      The sub-test test_101g failed with the following error:

      max_pages_per_rpc not correctly set
      

      Maybe due to http://review.whamcloud.com/19368 from LU-7990 and interaction with other patches.

      Info required for matching: sanity 101g

            adilger Andreas Dilger
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: