LU-8139 osc: correctly parse osc.*.max_pages_per_rpc

osc.*.max_pages_per_rpc is special, it can take number
of pages or it also accepts number of bytes if the number is
more than 1M, this is to have uniform IO sizes on platforms
that have varying page sizes.
Call lprocfs_str_with_units_to_s64 ith default unit of '%'
which means "no units", but allow the user to overrride by
supplying their own units.

Change-Id: I1ff4cc1848a14e42dcd05967e3e9341720c7042b
Signed-off-by: Oleg Drokin <oleg.drokin@intel.com>